Arrays: code style; Patterns: removing copying longMul functions